# Problem-Based-SRS

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_NOTES.md  TEMPLATE.md  TESTING.md  copilot-instructions.md  package-lock.json  package.json  pyproject.toml  run-tests.ps1
.claude-plugin/: plugin.json
.github/: copilot-instructions.md
.github/prompts/: cn.prompt.md  cp.prompt.md  fr.prompt.md  glance.prompt.md  problem-based-srs.md  vision.prompt.md  zigzag.prompt.md
.github/workflows/: ci.yml  create-release.yml
agents/problem-based-srs/: AGENT.md
docs/: CLAUDE_CODE_INTEGRATION.md  DESIGN.md  GITHUB_COPILOT_INTEGRATION.md  METHODOLOGY.md  PRODUCT.md  QUICK_REFERENCE.md  TESTING.md  app.html  banner.txt  docs.html  generate_banner.py  index.html  navigator-embed.html
docs/assets/: site.css  site.js
docs/helper/: README.md
docs/references/: README.md  iso-iec-ieee-29148-2018.md  rfc2119.md  rfc8174.md
evals/: README.md  run-evals.mjs
evals/cases/: _shared.mjs  customer-needs.case.mjs  (+4 more)
examples/: ecommerce-checkout-example.md
prompts/: 01-problem-identification.md  02-requirements-elicitation.md  03-requirements-specification.md  04-requirements-validation.md  CP.md  FR.md  glance.md  problem-based-SRS.md  vision.md  zigzag.md
scripts/: build-chain-animation.mjs  build-navigator-embed.mjs  build-plugin.py  build-problem-highlight.mjs  build.mjs
spec/: NFR.1.0.md  README.md  customer-problems.md
tests/: README.md  parser.py  test_parser.py  test_repository.py  test_validator.py  validator.py
(+70 files in other folders)
