[project]
name = "problem-based-srs-tests"
version = "0.1.0"
description = "Test suite for Problem-Based SRS methodology"
license = "MIT"
readme = "README.md"
authors = [
    { name = "rafael-gorski" }
]
requires-python = ">=3.11"
dependencies = [
    "strictyaml>=1.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.8.0",
]
